# mcp-client-project

./: README.md
mcp-client/: pyproject.toml
mcp-client/mcp_client/: __main__.py  chat.py  cli.py  handlers.py  mcp_client.py
mcp-client/mcp_server/: mcp_server.py
