[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP client for testing MCP servers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.1",
    "openai>=2.8.1",
    "typing_extensions>=4.0.0",
]

[project.scripts]
mcp-client = "mcp_client.__main__:cli_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_client*"]  # Only include mcp_client package
exclude = ["mcp_server*"]  # Explicitly exclude mcp_server